<?xml version="1.0"?>
<package>
  <name>anti_instagram</name>
  <version>0.0.0</version>
  <description>The anti_instagram package</description>
  <maintainer email="mfe@todo.todo">mfe</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>turtlebot3_auto_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>turtlebot3_auto_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>

  <test_depend>unittest</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
