<?xml version="1.0"?>
<package>
  <name>pi_camera</name>
  <version>0.0.0</version>
  <description>The pi_camera package</description>

  <maintainer email="censi@mit.edu">Andrea Censi</maintainer>
  <maintainer email="syliu@mit.edu">Shih-Yuan Liu</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>turtlebot3_auto_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>turtlebot3_auto_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>


  <export> </export>
</package>
