<?xml version="1.0"?>
<package>
  <name>turtlebot3_auto</name>
  <version>0.0.1</version>
  <description>
    ROS packages for the TurtleBot3-Auto (meta package)
  </description>
  <license>GPL 2.0</license>
  <author email="rwjung@robotis.com">Leon Ryuwoon Jung</author>
  <maintainer email="rwjung@robotis.com">Leon Ryuwoon Jung</maintainer>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3_auto/issues</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3_auto</url>
  <url type="website">http://wiki.ros.org/turtlebot3_auto</url>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>turtlebot3_auto_msgs</run_depend>
  <run_depend>anti_instagram</run_depend>
  <run_depend>line_detector</run_depend>
  <run_depend>ground_projection</run_depend>
  <run_depend>pi_camera</run_depend>
  <export><metapackage/></export>
</package>
